[+] Added info about Java in Avicomp

--- a/matrosova-cv-rus.tex
+++ b/matrosova-cv-rus.tex
@@ -51,7 +51,7 @@
 
 \cvitem{с~2011\cvmonth{09} по~2013\cvmonth{12}}{
 	\textbf{ЗАО Эвентос}, \emph{младший разработчик, разработчик}. \newline
-	Создание и проектирование системы для синтеза и анализа русских словоформ. Прочие мелкие проекты, так или иначе связанные с анализом текстовой информации. 
+	Создание и проектирование системы для синтеза и анализа русских словоформ. Прочие мелкие проекты, так или иначе связанные с анализом текстовой информации. Программирование на языке Java. 
 }
 
 \subsection{Вторичный}	
