[+] Added info about FIVT, Avicomp, my dreams

--- a/matrosova-cv-rus.tex
+++ b/matrosova-cv-rus.tex
@@ -8,7 +8,7 @@
 
 \begin{document}
 \maketitle
-Выпускница ВМК МГУ с опытом разработки, преподавания и чутьём на ошибки. Ищу работу программистом C++, Java или тестировщиком (работа преподавателем у меня уже есть).
+Выпускница ВМК МГУ с опытом разработки, преподавания и чутьём на ошибки. Ищу работу программистом C++, Java или тестировщиком в фирме с хорошо поставленным процессом разработки. Очень хочу стать действительно хорошим специалистом своего дела.
 
 \section{Навыки}
 
@@ -44,14 +44,15 @@
 
 \subsection{Основной}
 
-\cvitem{с~2014\cvmonth{09}}{
+\cvitem{с~2014\cvmonth{09} по~2015\cvmonth{05}}{
 	\textbf{ФИВТ МФТИ (ГУ)}, \emph{преподаватель}. \newline 
-	Проведение семинаров по курсу <<Алгоритмы и структуры данных>> у студентов второго года обучения. Включает в себя изучение широкого класса алгоритмов, структур данных, языка C++.
+	Проведение семинаров по курсу <<Алгоритмы и структуры данных>> у студентов второго года обучения. Включает в себя изучение широкого класса алгоритмов, структур данных, основ языка C++.
 }
 
 \cvitem{с~2011\cvmonth{09} по~2013\cvmonth{12}}{
 	\textbf{ЗАО Эвентос}, \emph{младший разработчик, разработчик}. \newline
-	Создание и проектирование системы для синтеза и анализа русских словоформ. Прочие мелкие проекты, так или иначе связанные с анализом текстовой информации. Программирование на языке Java. 
+	Программирование на языке Java. \newline
+	Основная задача: создание и проектирование системы для синтеза и анализа русских словоформ. Самостоятельное проектирование системы с нуля, составление и поддержка архитектуры классов, внедрение в уже существующий основной проект. \newline Прочие мелкие проекты, так или иначе связанные с анализом текстовой информации.  
 }
 
 \subsection{Вторичный}	
