[+] Add tecon work

--- a/matrosova-cv-rus.tex
+++ b/matrosova-cv-rus.tex
@@ -8,14 +8,14 @@
 
 \begin{document}
 \maketitle
-Выпускница ВМК МГУ с опытом разработки, преподавания и чутьём на ошибки. Ищу работу программистом C++, Java или тестировщиком в фирме с хорошо поставленным процессом разработки. Очень хочу стать действительно хорошим специалистом своего дела.
+Выпускница ВМК МГУ с опытом разработки, преподавания и чутьём на ошибки. Ищу работу программистом C++ в фирме с хорошо поставленным процессом разработки и мудрыми наставниками. Очень хочу стать действительно хорошим специалистом своего дела. Люблю писать хороший код, совершенствоваться в проектировании архитектуры программ и искать ошибки в чужом коде.
 
 \section{Навыки}
 
 \subsection{Языки программирования}
 
 \cvitem{основные}{
-	\textbf{C++}: с 2011, разработка вычислительных алгоритмов. \newline
+	\textbf{C++}: с 2011, разработка вычислительных алгоритмов, разработка тестов для системы на кристалле. \newline
 	\textbf{Java}: с 2011 по 2013, разработка текстовых алгоритмов и GUI.
 }
 
@@ -33,7 +33,7 @@
 \subsection{Прикладные программы и системы}
 
 \cvitem{основные}{
-	\textbf{Windows}, \textbf{Visual Studio}, \textbf{IntelliJ IDEA}, \textbf{SmartGit}, \textbf{SVN}
+	\textbf{Windows}, \textbf{Visual Studio}, \textbf{IntelliJ IDEA}, \textbf{SmartGit}, \textbf{QtCreator}
 }
 \cvitem{вторичные}{
 	\textbf{Unix}, \textbf{\LaTeX}
@@ -43,6 +43,11 @@
 \section{Опыт работы}
 
 \subsection{Основной}
+
+\cvitem{с~2015\cvmonth{10}}{
+	\textbf{ООО Текон МТ}, \emph{инженер-программист}. \newline 
+	Разработка системных тестов для периферийных устройств системы на кристалле. Разработка и проектирование архитектуры базовых классов для системных тестов. 
+}
 
 \cvitem{с~2014\cvmonth{09} по~2015\cvmonth{05}}{
 	\textbf{ФИВТ МФТИ (ГУ)}, \emph{преподаватель}. \newline 
