--- a/matrosova-cv-rus.tex
+++ b/matrosova-cv-rus.tex
@@ -8,21 +8,21 @@
 
 \begin{document}
 \maketitle
-Выпускница ВМК МГУ с опытом разработки, преподавания и чутьём на ошибки. Ищу работу программистом C++ в фирме с хорошо поставленным процессом разработки и мудрыми наставниками. Очень хочу стать действительно хорошим специалистом своего дела. Люблю писать хороший код, совершенствоваться в проектировании архитектуры программ и искать ошибки в чужом коде.
+Ищу работу программистом C++ в фирме с хорошо поставленным процессом разработки и мудрыми наставниками. Люблю писать хороший код, совершенствоваться в проектировании архитектуры программ и искать ошибки в чужом коде.
 
 \section{Навыки}
 
 \subsection{Языки программирования}
 
 \cvitem{основные}{
-	\textbf{C++}: с 2011, разработка вычислительных алгоритмов, разработка тестов для системы на кристалле. \newline
+	\textbf{C++}: с 2011, разработка вычислительных алгоритмов, разработка bare-metal тестов для системы на кристалле (микроконтроллера). \newline
 	\textbf{Java}: с 2011 по 2013, разработка текстовых алгоритмов и GUI.
 }
 
 \subsection{Библиотеки и технологии}
 
 \cvitem{C++}{
-	\textbf{LAPACK}, \textbf{MPICH}, \textbf{OpenMP}, \textbf{STL}: проекты по вычислительным алгоритмам на суперкомпьютере.
+	\textbf{LAPACK}, \textbf{MPICH}, \textbf{OpenMP}, \textbf{STL}: учебные и дипломные проекты по вычислительным алгоритмам на суперкомпьютере.
 }
 \cvitem{Java}{
 	\textbf{Swing}: разработка простых GUI. \newline
@@ -33,10 +33,10 @@
 \subsection{Прикладные программы и системы}
 
 \cvitem{основные}{
-	\textbf{Windows}, \textbf{Visual Studio}, \textbf{IntelliJ IDEA}, \textbf{SmartGit}, \textbf{QtCreator}
+	\textbf{Windows}, \textbf{Visual Studio}, \textbf{IntelliJ IDEA}, \textbf{SmartGit}, \textbf{QtCreator}, \textbf{Bamboo}, 
 }
 \cvitem{вторичные}{
-	\textbf{Unix}, \textbf{\LaTeX}
+	\textbf{Unix}, \textbf{\LaTeX}, \textbf{Gitolite}, \textbf{Synopsis VCS}
 }
 
 
@@ -46,7 +46,7 @@
 
 \cvitem{с~2015\cvmonth{10}}{
 	\textbf{ООО Текон МТ}, \emph{инженер-программист}. \newline 
-	Разработка системных тестов для периферийных устройств системы на кристалле. Разработка и проектирование архитектуры базовых классов для системных тестов. 
+	Язык С++. Разработка системных тестов для периферийных устройств системы на кристалле - написание bare-metal кода для тестирования самодельного чипа. Разработка, проектирование и поддержание архитектуры базовых классов для системных тестов. Организация процесса подготовки тестов для конкретного проекта. Организация Continuous Integration в Bamboo для данного проекта. Администрирование структуры и прав доступа в репозиториях с сабмодулями. Поддержание сложной структуры мейкфайлов для проекта.  
 }
 
 \cvitem{с~2014\cvmonth{09} по~2015\cvmonth{05}}{
