[~+] Fix misprint, add asciidoc

--- a/matrosova-cv-rus.tex
+++ b/matrosova-cv-rus.tex
@@ -33,10 +33,10 @@
 \subsection{Прикладные программы и системы}
 
 \cvitem{основные}{
-	\textbf{Windows}, \textbf{Visual Studio}, \textbf{IntelliJ IDEA}, \textbf{SmartGit}, \textbf{QtCreator}, \textbf{Bamboo}, 
+	\textbf{Windows}, \textbf{Visual Studio}, \textbf{IntelliJ IDEA}, \textbf{SmartGit}, \textbf{QtCreator}, \textbf{Bamboo}
 }
 \cvitem{вторичные}{
-	\textbf{Unix}, \textbf{\LaTeX}, \textbf{Gitolite}, \textbf{Synopsis VCS}
+	\textbf{Unix}, \textbf{\LaTeX}, \textbf{Gitolite}, \textbf{Synopsis VCS}, \textbf{AsciiDoc}
 }
 
 
