--- a/matrosova-cv-rus.tex
+++ b/matrosova-cv-rus.tex
@@ -46,7 +46,7 @@
 
 \cvitem{с~2015\cvmonth{10}}{
 	\textbf{ООО Текон МТ}, \emph{инженер-программист}. \newline 
-	Язык С++. Разработка системных тестов для периферийных устройств системы на кристалле - написание bare-metal кода для тестирования самодельного чипа. Разработка, проектирование и поддержание архитектуры базовых классов для системных тестов. Организация процесса подготовки тестов для конкретного проекта. Организация Continuous Integration в Bamboo для данного проекта. Администрирование структуры и прав доступа в репозиториях с сабмодулями. Поддержание сложной структуры мейкфайлов для проекта.  
+	Язык С++. Разработка системных тестов для периферийных устройств системы на кристалле - написание bare-metal кода для тестирования самодельного чипа. Разработка, проектирование и поддержание архитектуры базовых классов для системных тестов. Написание простейшего загрузчика на ассемблере RISC-V. Организация процесса подготовки тестов для конкретного проекта. Организация Continuous Integration в Bamboo для данного проекта. Администрирование структуры и прав доступа в репозиториях с сабмодулями. Поддержание сложной структуры мейкфайлов для проекта.  
 }
 
 \cvitem{с~2014\cvmonth{09} по~2015\cvmonth{05}}{
